PRODEV-1601. Fix some spacing

--- a/src/components/Calendar/DateHeading/DateHeading.scss
+++ b/src/components/Calendar/DateHeading/DateHeading.scss
@@ -3,6 +3,10 @@
   align-items: center;
   margin-top: -0.5rem;
   margin-bottom: 1rem;
+
+  @media (max-width: 768px) {
+    margin-top: 1rem;
+  }
 }
 
 .dateHeading {
